# package-description-aeson

./: .gitmodules  Aeson.hs  Makefile  README.md  Simple.hs  output  output.json  package-description-aeson.cabal  stack.yaml
src/: Main.hs
src/Distribution/PackageDescription/: Aeson.hs  AesonSpec.hs
