name:                package-description-aeson
version:             0.1.0.0
synopsis:            Provides ToJSON and FromJSON instances for cabal files
homepage:            https://github.com/yamadapc/package-description-aeson
license:             MIT
license-file:        LICENSE
author:              Pedro Tacla Yamada
maintainer:          tacla.yamada@gmail.com
copyright:           Copyright (c) 2015 Pedro Tacla Yamada
category:            Development
build-type:          Simple
cabal-version:       >=1.10
data-dir: .

library
  exposed-modules:     Distribution.PackageDescription.Aeson
  build-depends:       Cabal
                     , aeson >= 0.10
                     , base >=4.8 && <4.9
                     , containers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -ddump-splices

test-suite hspec
  type: exitcode-stdio-1.0
  -- main-is: Spec.hs
  main-is: Distribution/PackageDescription/AesonSpec.hs
  -- other-modules: Distribution.PackageDescription.Aeson
  --              , Distribution.PackageDescription.AesonSpec
  --              , Paths_package_description_aeson
  build-depends:       Cabal
                     , aeson >= 0.10
                     , base >=4.8 && <4.9
                     , containers
                     , bytestring
                     , aeson-pretty
                     , hspec
  hs-source-dirs:      src
  default-language:    Haskell2010
